# ml-customer-agent

./: .gitignore  main.py  pyproject.toml
feedback_agent/: config.py
feedback_agent/agent/: calculator_agent.py  feedback_analysis_agent.py
feedback_agent/config/: LLM_CONFIG.py
feedback_agent/tools/: categorization_tool.py  feedback_reader_tool.py  keyword_extraction_tool.py  sentiment_analysis_tool.py
local_code_executor/: config.py  pltr_closing.py
local_code_executor/coding/: plot_pltr_stock.py
