[project]
name = "ml-customer-feedback-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen==0.3.0",
    "autogen-agentchat~=0.2",
    "fix-busted-json==0.0.18",
    "flaml[automl]>=2.3.6",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "ollama==0.3.3",
    "yfinance>=0.2.66",
]
